@@ -26,6 +26,8 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.function.Consumer;
+import java.util.function.Function;
 import lombok.SneakyThrows;
 import org.apache.commons.collections4.CollectionUtils;
 import org.jdbi.v3.core.mapper.RowMapper;
@@ -72,6 +74,47 @@ public interface EntityDAO<T extends EntityInterface> {
    * is.)
    */
   int MAX_IN_LIST_CHUNK_SIZE = 30_000;
+
+  /**
+   * Run a SQL IN-list query in {@link #MAX_IN_LIST_CHUNK_SIZE}-sized chunks and concatenate the
+   * results, keeping each statement under the database parameter ceiling. For inputs at or below
+   * the chunk size the list is passed straight through, preserving the single-query behavior (and
+   * the caller's empty-list handling) exactly. When chunking is required the ids are de-duplicated
+   * first (encounter order preserved) so a value split across two chunks is not queried twice and
+   * cannot duplicate result rows — matching the semantics of a single {@code IN (...)}, which
+   * ignores duplicate values.
+   */
+  static <I, R> List<R> queryInChunks(List<I> ids, Function<List<I>, List<R>> query) {
+    List<R> result;
+    if (ids != null && ids.size() > MAX_IN_LIST_CHUNK_SIZE) {
+      List<I> distinctIds = ids.stream().distinct().toList();
+      result = new ArrayList<>(distinctIds.size());
+      for (int i = 0; i < distinctIds.size(); i += MAX_IN_LIST_CHUNK_SIZE) {
+        int end = Math.min(i + MAX_IN_LIST_CHUNK_SIZE, distinctIds.size());
+        result.addAll(query.apply(distinctIds.subList(i, end)));
+      }
+    } else {
+      result = query.apply(ids);
+    }
+    return result;
+  }
+
+  /**
+   * Void counterpart of {@link #queryInChunks} for chunked IN-list updates/deletes. De-duplicates
+   * before chunking for the same reason: a value split across chunks would otherwise issue a
+   * redundant statement, whereas a single {@code WHERE id IN (...)} affects each row once.
+   */
+  static <I> void updateInChunks(List<I> ids, Consumer<List<I>> update) {
+    if (ids != null && ids.size() > MAX_IN_LIST_CHUNK_SIZE) {
+      List<I> distinctIds = ids.stream().distinct().toList();
+      for (int i = 0; i < distinctIds.size(); i += MAX_IN_LIST_CHUNK_SIZE) {
+        int end = Math.min(i + MAX_IN_LIST_CHUNK_SIZE, distinctIds.size());
+        update.accept(distinctIds.subList(i, end));
+      }
+    } else {
+      update.accept(ids);
+    }
+  }
 
   /** Methods that need to be overridden by interfaces extending this */
   String getTableName();
@@ -171,6 +214,30 @@ public interface EntityDAO<T extends EntityInterface> {
       @Bind("version") String version);
 
   /**
+   * Optimistic content-based compare-and-swap. Rewrites the row only when its stored json still
+   * equals {@code expectedJson} (the snapshot last read). Returns the number of rows updated (0
+   * when another writer changed the row in the meantime, 1 on success). Lets background rewrites
+   * detect lost-update races without bumping the entity version or writing version history.
+   */
+  @ConnectionAwareSqlUpdate(
+      value =
+          "UPDATE <table> SET json = :json, <nameHashColumn> = :nameHashColumnValue "
+              + "WHERE id = :id AND json = CAST(:expectedJson AS JSON)",
+      connectionType = MYSQL)
+  @ConnectionAwareSqlUpdate(
+      value =
+          "UPDATE <table> SET json = (:json :: jsonb), <nameHashColumn> = :nameHashColumnValue "
+              + "WHERE id = :id AND json = (:expectedJson :: jsonb)",
+      connectionType = POSTGRES)
+  int updateIfMatches(
+      @Define("table") String table,
+      @Define("nameHashColumn") String nameHashColumn,
+      @BindFQN("nameHashColumnValue") String nameHashColumnValue,
+      @Bind("id") String id,
+      @Bind("json") String json,
+      @Bind("expectedJson") String expectedJson);
+
+  /**
    * List (id, fullyQualifiedName) pairs for all rows whose FQN hash begins with {@code
    * oldPrefixHash}. Used by rename cascade flows to enumerate which children need cache
    * invalidation before an {@link #updateFqn} bulk rewrite.
@@ -193,10 +260,47 @@ public interface EntityDAO<T extends EntityInterface> {
 
   default List<EntityIdFqnPair> listDescendantIdFqnByPrefix(String oldPrefix) {
     if (!getNameHashColumn().equals("fqnHash")) {
-      return java.util.Collections.emptyList();
+      return List.of();
     }
     String prefixPattern = FullyQualifiedName.buildHash(oldPrefix) + ".%";
     return listIdFqnByPrefixHash(getTableName(), getNameHashColumn(), prefixPattern);
+  }
+
+  /**
+   * Like {@link #listIdFqnByPrefixHash} but excludes soft-deleted rows. Used by the bulk
+   * stale-deletion path which only considers currently-live entities when deciding what the
+   * connector no longer reports.
+   */
+  @ConnectionAwareSqlQuery(
+      value =
+          "SELECT id, JSON_UNQUOTE(JSON_EXTRACT(json, '$.fullyQualifiedName')) AS fqn FROM <table> "
+              + "WHERE <nameHashColumn> LIKE :prefix "
+              + "AND (JSON_EXTRACT(json, '$.deleted') IS NULL "
+              + "OR JSON_UNQUOTE(JSON_EXTRACT(json, '$.deleted')) = 'false')",
+      connectionType = MYSQL)
+  @ConnectionAwareSqlQuery(
+      value =
+          "SELECT id, json->>'fullyQualifiedName' AS fqn FROM <table> "
+              + "WHERE <nameHashColumn> LIKE :prefix "
+              + "AND (json->>'deleted' IS NULL OR json->>'deleted' = 'false')",
+      connectionType = POSTGRES)
+  @RegisterRowMapper(EntityIdFqnPairMapper.class)
+  List<EntityIdFqnPair> listIdFqnByPrefixHashNonDeleted(
+      @Define("table") String table,
+      @Define("nameHashColumn") String nameHashColumn,
+      @Bind("prefix") String prefix);
+
+  /**
+   * List (id, fullyQualifiedName) pairs for all non-deleted descendants of {@code scopeFqn}.
+   * Returns an empty list for entity types whose name-hash column is not {@code fqnHash} - those
+   * types do not participate in scope-based stale deletion.
+   */
+  default List<EntityIdFqnPair> listDescendantIdFqnByPrefixNonDeleted(String scopeFqn) {
+    if (!getNameHashColumn().equals("fqnHash")) {
+      return List.of();
+    }
+    String prefixPattern = FullyQualifiedName.buildHash(scopeFqn) + ".%";
+    return listIdFqnByPrefixHashNonDeleted(getTableName(), getNameHashColumn(), prefixPattern);
   }
 
   final class EntityIdFqnPair {
@@ -393,6 +497,10 @@ public interface EntityDAO<T extends EntityInterface> {
 
   @SqlQuery("SELECT json FROM <table> WHERE id = :id <cond>")
   String findById(
+      @Define("table") String table, @BindUUID("id") UUID id, @Define("cond") String cond);
+
+  @SqlQuery("SELECT json FROM <table> WHERE id = :id <cond> FOR UPDATE")
+  String findByIdForUpdate(
       @Define("table") String table, @BindUUID("id") UUID id, @Define("cond") String cond);
 
   @SqlQuery("SELECT id, json FROM <table> WHERE id IN (<ids>) <cond>")
@@ -628,6 +736,36 @@ public interface EntityDAO<T extends EntityInterface> {
       @Bind("limit") int limit,
       @Bind("offset") int offset);
 
+  record CursorRow(String name, String id) {}
+
+  class CursorRowMapper implements RowMapper<CursorRow> {
+    @Override
+    public CursorRow map(ResultSet rs, StatementContext ctx) throws SQLException {
+      return new CursorRow(rs.getString("name"), rs.getString("id"));
+    }
+  }
+
+  /**
+   * Lightweight cursor lookup at an absolute offset. Selects ONLY {@code name}, {@code id} so the
+   * per-entity {@code (name)} index covers the query and {@code ORDER BY name, id} is served
+   * index-only ({@code EXPLAIN} shows "Using index") with no filesort. Selecting {@code json} is
+   * not covered by that index, so a cost-based optimizer may instead choose a filesort on the
+   * {@code ORDER BY name, id} key — the json-derived {@code name} generated column, whose sort
+   * rows can exhaust sort memory and throw {@code ER_OUT_OF_SORTMEMORY ("Out of sort memory,
+   * consider increasing server sort buffer size")} on large catalogs (the work scales with the
+   * OFFSET). Serving the cursor lookup index-only avoids that sort entirely and never materializes
+   * the {@code json} blob for the skipped rows. The {@code name}/{@code id} columns are generated
+   * from {@code json.$.name}/{@code json.$.id}, so the returned values are identical to
+   * {@code entity.getName()}/{@code entity.getId()}.
+   */
+  @SqlQuery("SELECT name, id FROM <table> <cond> ORDER BY name, id LIMIT 1 OFFSET :offset")
+  @RegisterRowMapper(CursorRowMapper.class)
+  CursorRow getCursorAtOffset(
+      @Define("table") String table,
+      @BindMap Map<String, ?> params,
+      @Define("cond") String cond,
+      @Bind("offset") int offset);
+
   @SqlQuery("SELECT EXISTS (SELECT * FROM <table> WHERE id = :id)")
   boolean exists(@Define("table") String table, @BindUUID("id") UUID id);
 
@@ -721,6 +859,16 @@ public interface EntityDAO<T extends EntityInterface> {
         JsonUtils.pojoToJson(entity));
   }
 
+  default int updateIfMatches(EntityInterface entity, String expectedJson) {
+    return updateIfMatches(
+        getTableName(),
+        getNameHashColumn(),
+        entity.getFullyQualifiedName(),
+        entity.getId().toString(),
+        JsonUtils.pojoToJson(entity),
+        expectedJson);
+  }
+
   default String getCondition(Include include) {
     if (!supportsSoftDelete()) {
       return "";
@@ -730,6 +878,16 @@ public interface EntityDAO<T extends EntityInterface> {
       return "AND deleted = FALSE";
     }
     return include == Include.DELETED ? " AND deleted = TRUE" : "";
+  }
+
+  /**
+   * Fetch the raw json for a row while taking a {@code FOR UPDATE} row lock. Background rewrites use
+   * this so that, inside an enclosing transaction, the re-read sees the latest committed row (a
+   * plain consistent read would return the transaction's stale snapshot under MySQL REPEATABLE
+   * READ) and concurrent writers on the same row are serialized.
+   */
+  default String findJsonByIdForUpdate(UUID id, Include include) {
+    return findByIdForUpdate(getTableName(), id, getCondition(include));
   }
 
   default T findEntityById(UUID id, Include include) {
@@ -880,6 +1038,11 @@ public interface EntityDAO<T extends EntityInterface> {
 
   default List<String> listAfter(ListFilter filter, int limit, int offset) {
     return listAfter(getTableName(), filter.getQueryParams(), filter.getCondition(), limit, offset);
+  }
+
+  default CursorRow getCursorAtOffset(ListFilter filter, int offset) {
+    return getCursorAtOffset(
+        getTableName(), filter.getQueryParams(), filter.getCondition(), offset);
   }
 
   default void exists(UUID id) {
